Agregue estilos al header

--- a/contact.html
+++ b/contact.html
@@ -14,6 +14,7 @@
   <body>
     <header>
       <img
+        id="img-header"
         height="120"
         src="./assets/Logo Mighty ducks-01.png"
         alt="Logo del equipo"
