--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <link
       rel="shortcut icon"
       type="image/x-icon"
@@ -13,24 +14,28 @@
   </head>
   <body>
     <header>
-      <img
-        height="120"
-        src="./assets/Logo Mighty ducks-01.png"
-        alt="Logo del equipo"
-      />
-      <h1 style="display: inline-block; font-size: 50px">
-        Mighty Ducks Hockey League
-      </h1>
-      <nav>
-        <a href="#">Home</a>
-        <span>|</span>
-        <a href="./about.html">About</a>
-        <span>|</span>
-        <a href="./contact.html">Contact</a>
-      </nav>
+      <h1>Mighty Ducks Hockey League</h1>
     </header>
+    <div class="container">
+      <div>
+        <h2 id="subtitulo">Upcoming Events</h2>
+      </div>
+      <div>
+        <img
+          id="logo"
+          src="./assets/Logo Mighty ducks-01.png"
+          alt="Logo del equipo"
+        />
+      </div>
+    </div>
+    <!--<nav>
+      <a href="#">Home</a>
+      <span>|</span>
+      <a href="./about.html">About</a>
+      <span>|</span>
+      <a href="./contact.html">Contact</a>
+    </nav> -->
     <main>
-      <h2>Upcoming Events</h2>
       <article>
         <img
           height="200"
