--- a/index.html
+++ b/index.html
@@ -28,26 +28,29 @@
         />
       </div>
     </div>
-    <!--<nav>
-      <a href="#">Home</a>
-      <span>|</span>
-      <a href="./about.html">About</a>
-      <span>|</span>
-      <a href="./contact.html">Contact</a>
-    </nav> -->
     <main>
+      <nav>
+        <a href="#">Home</a>
+        <a href="./about.html">About</a>
+        <a href="./contact.html">Contact</a>
+      </nav>
       <article>
-        <img
-          height="200"
-          src="./assets/hockey  1.jpg"
-          alt="Jugadora de Hockey"
-        />
-        <h3>August 4</h3>
-        <p>MDSL Fundraiser</p>
-        <h3>August 16</h3>
-        <p>Season Kick-off: Meet the Teams</p>
-        <h3>September 1</h3>
-        <p>First Game of the Season (Check Game Schedule for details</p>
+        <div>
+          <div class="container-events">
+            <h3>August 4</h3>
+            <p>MDSL Fundraiser</p>
+          </div>
+          <div class="container-events">
+            <h3>August 16</h3>
+            <p>Season Kick-off: Meet the Teams</p>
+          </div>
+          <div class="container-events">
+            <h3>September 1</h3>
+            <p>First Game of the Season (Check Game Schedule for details</p>
+          </div>
+        </div>
+
+        <img src="./assets/hockey  1.jpg" alt="Jugadora de Hockey" />
       </article>
     </main>
   </body>
