About terminado con sus diseño

--- a/about.html
+++ b/about.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <link
       rel="shortcut icon"
       type="image/x-icon"
@@ -13,49 +14,65 @@
   </head>
   <body>
     <header>
-      <img
-        height="120"
-        src="./assets/Logo Mighty ducks-01.png"
-        alt="Logo del equipo"
-      />
-      <h1 style="display: inline-block; font-size: 50px">
-        Mighty Ducks Hockey League
-      </h1>
+      <h1>Mighty Ducks Hockey League</h1>
+    </header>
+    <div class="container">
+      <div>
+        <h2 id="subtitulo">About MDHL</h2>
+      </div>
+      <div>
+        <img
+          id="logo"
+          src="./assets/Logo Mighty ducks-01.png"
+          alt="Logo del equipo"
+        />
+      </div>
+    </div>
+    <main>
       <nav>
         <a href="./index.html">Home</a>
         <a href="#">About</a>
         <a href="./contact.html">Contact</a>
       </nav>
-    </header>
-    <main>
       <article>
+        <div>
+          <div class="container-about">
+            <h3>Mision</h3>
+            <p>
+              To support young athletes living Chicago's northside neighborhood,
+              who have an interest in learning and playing soccer, with
+              opportunities to learn and practice skills related to the game of
+              hockey, specifically those skills around team cooperation and good
+              sportsmanship
+            </p>
+          </div>
+          <div class="container-about">
+            <h3>Vision</h3>
+            <p>
+              The Mighty Ducks Hockey League aspires to develop strong,
+              well-rounded and mindful athletes through the building of
+              character, self-discipline, and leadership.
+            </p>
+          </div>
+
+          <div class="container-about">
+            <h3>General Information</h3>
+            <p>
+              The Mighty Ducks Soccer League was established in 1996 to provide
+              athletes residing Chicago's northside neighborhoods an environment
+              in which to learn and play hockey. To be a member of MDHL, you
+              must be between the ages of 4 - 12 and reside a Chicago northside
+              neighborhood. MDHL ran by o small full-time staff, and relies on
+              the generous volunteer time of parents and previous league members
+            </p>
+          </div>
+        </div>
+
         <img
           height="200"
           src="./assets/hockey  2.jpg"
           alt="Jugadora de Hockey"
         />
-        <h3>Mision</h3>
-        <p>
-          To support young athletes living Chicago's northside neighborhood, who
-          have an interest in learning and playing soccer, with opportunities to
-          learn and practice skills related to the game of hockey, specifically
-          those skills around team cooperation and good sportsmanship
-        </p>
-        <h3>Vision</h3>
-        <p>
-          The Mighty Ducks Hockey League aspires to develop strong, well-rounded
-          and mindful athletes through the building of character,
-          self-discipline, and leadership.
-        </p>
-        <h3>General Information</h3>
-        <p>
-          The Mighty Ducks Soccer League was established in 1996 to provide
-          athletes residing Chicago's northside neighborhoods an environment in
-          which to learn and play hockey. To be a member of MDHL, you must be
-          between the ages of 4 - 12 and reside a Chicago northside
-          neighborhood. MDHL ran by o small full-time staff, and relies on the
-          generous volunteer time of parents and previous league members
-        </p>
       </article>
     </main>
   </body>
