Elimine espacios en los nombre de las imgs para evitar conflictos

--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="./assets/favicon-migthyDucks.png"
+      href="./assets/img/favicon-migthyDucks.png"
     />
     <title>Migthy Duck</title>
   </head>
@@ -23,7 +23,7 @@
       <div>
         <img
           id="logo"
-          src="./assets/Logo Mighty ducks-01.png"
+          src="./assets/img/LogoMightyducks-01.png"
           alt="Logo del equipo"
         />
       </div>
@@ -70,7 +70,7 @@
 
         <img
           height="200"
-          src="./assets/hockey  2.jpg"
+          src="./assets/img/hockey2.jpg"
           alt="Jugadora de Hockey"
         />
       </article>
