--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="./assets/favicon-migthyDucks.png"
+      href="./assets/img/favicon-migthyDucks.png"
     />
     <title>Migthy Duck</title>
   </head>
@@ -23,7 +23,7 @@
       <div>
         <img
           id="logo"
-          src="./assets/Logo Mighty ducks-01.png"
+          src="./assets/img/LogoMightyducks-01.png"
           alt="Logo del equipo"
         />
       </div>
@@ -50,7 +50,7 @@
           </div>
         </div>
 
-        <img src="./assets/hockey  1.jpg" alt="Jugadora de Hockey" />
+        <img src="./assets/img/hockey1.jpg" alt="Jugadora de Hockey" />
       </article>
     </main>
   </body>
