--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="./assets/favicon-migthyDucks.png"
+      href="./assets/img/favicon-migthyDucks.png"
     />
     <title>Migthy Duck</title>
   </head>
@@ -23,7 +23,7 @@
       <div>
         <img
           id="logo"
-          src="./assets/Logo Mighty ducks-01.png"
+          src="./assets/img/LogoMightyducks-01.png"
           alt="Logo del equipo"
         />
       </div>
@@ -46,7 +46,7 @@
             <p>We reply to your email as soon as we can</p>
           </div>
         </div>
-        <img src="./assets/hockey 3.jpg" alt="Dos jugadores de hockey" />
+        <img src="./assets/img/hockey3.jpg" alt="Dos jugadores de hockey" />
       </article>
     </main>
   </body>
