Arregle margenes y cambia etiquetas

--- a/index.html
+++ b/index.html
@@ -28,27 +28,30 @@
         />
       </div>
     </div>
-    <nav>
-      <a href="#">Home</a>
-      <a href="./about.html">About</a>
-      <a href="./contact.html">Contact</a>
-    </nav>
-    <main>
-      <article>
-        <div class="container-events">
+    <div class="prueba">
+      <nav>
+        <a href="#">Home</a>
+        <a href="./about.html">About</a>
+        <a href="./contact.html">Contact</a>
+      </nav>
+
+      <main>
+        <article class="container-events">
           <h3>August 4</h3>
-          <p>MDSL Fundraiser</p>
-        </div>
-        <div class="container-events">
+          <p class="p-events">MDSL Fundraiser</p>
+        </article>
+        <article class="container-events">
           <h3>August 16</h3>
-          <p>Season Kick-off: Meet the Teams</p>
-        </div>
-        <div class="container-events">
+          <p class="p-events">Season Kick-off: Meet the Teams</p>
+        </article>
+
+        <article class="container-events">
           <h3>September 1</h3>
-          <p>First Game of the Season (Check Game Schedule for details</p>
-        </div>
+          <p class="p-events">First Game of the Season (Check Game Schedule for details</p>
+        </article>
+
         <img src="./assets/img/hockey1.jpg" alt="Jugadora de Hockey" />
-      </article>
-    </main>
+      </main>
+    </div>
   </body>
 </html>
