Todos los archivos corregidos

--- a/about.html
+++ b/about.html
@@ -28,14 +28,15 @@
         />
       </div>
     </div>
-    <main>
-      <nav>
+    <div class="prueba">
+      <nav class="nav-a">
         <a href="./index.html">Home</a>
         <a href="#">About</a>
         <a href="./contact.html">Contact</a>
       </nav>
-      <article>
-        <div class="container-about">
+
+      <main>
+        <article class="container-about">
           <h3>Mision</h3>
           <p>
             To support young athletes living Chicago's northside neighborhood,
@@ -44,17 +45,16 @@
             hockey, specifically those skills around team cooperation and good
             sportsmanship
           </p>
-        </div>
-        <div class="container-about">
+        </article>
+        <article class="container-about">
           <h3>Vision</h3>
           <p>
             The Mighty Ducks Hockey League aspires to develop strong,
             well-rounded and mindful athletes through the building of character,
             self-discipline, and leadership.
           </p>
-        </div>
-
-        <div class="container-about">
+        </article>
+        <article class="container-about">
           <h3>General Information</h3>
           <p>
             The Mighty Ducks Soccer League was established in 1996 to provide
@@ -64,14 +64,13 @@
             neighborhood. MDHL ran by o small full-time staff, and relies on the
             generous volunteer time of parents and previous league members
           </p>
-        </div>
-
+        </article>
         <img
           height="200"
           src="./assets/img/hockey2.jpg"
           alt="Jugadora de Hockey"
         />
-      </article>
-    </main>
+      </main>
+    </div>
   </body>
 </html>
