--- a/contact.html
+++ b/contact.html
@@ -28,26 +28,25 @@
         />
       </div>
     </div>
-    <main>
-      <nav>
+    <div class="prueba">
+      <nav class="nav-c">
         <a href="./index.html">Home</a>
         <a href="./about.html">About</a>
         <a href="#">Contact</a>
       </nav>
-      <article>
-        <div>
-          <div class="container-contact">
-            <p>
-              Please email us at
-              <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a>
-            </p>
-          </div>
-          <div class="container-contact">
-            <p>We reply to your email as soon as we can</p>
-          </div>
-        </div>
+      <main>
+        <article class="container-contact">
+          <h2>Contact us:</h2>
+          <p class="paragraph-contact">
+            Please email us at
+            <a href="mailto:mdhl@chihockey.org">mdhl@chihockey.org</a>
+          </p>
+          <p class="paragraph-contact">
+            We reply to your email as soon as we can
+          </p>
+        </article>
         <img src="./assets/img/hockey3.jpg" alt="Dos jugadores de hockey" />
-      </article>
-    </main>
+      </main>
+    </div>
   </body>
 </html>
