--- a/index.html
+++ b/index.html
@@ -47,7 +47,9 @@
 
         <article class="container-events">
           <h3>September 1</h3>
-          <p class="p-events">First Game of the Season (Check Game Schedule for details</p>
+          <p class="p-events">
+            First Game of the Season (Check Game Schedule for details)
+          </p>
         </article>
 
         <img src="./assets/img/hockey1.jpg" alt="Jugadora de Hockey" />
