Se arreglaron conflictos con etiquetas

--- a/about.html
+++ b/about.html
@@ -1,34 +1,32 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link
       rel="shortcut icon"
       type="image/x-icon"
       href="./assets/img/favicon-migthyDucks.png"
-    />
+    >
     <title>Migthy Duck</title>
   </head>
   <body>
     <header>
       <h1>Mighty Ducks Hockey League</h1>
     </header>
-    <div class="container">
-      <div>
-        <h2 id="subtitulo">About MDHL</h2>
-      </div>
-      <div>
-        <img
-          id="logo"
-          src="./assets/img/LogoMightyducks-01.png"
-          alt="Logo del equipo"
-        />
-      </div>
+
+    <div class="container-text-logo">
+      <h2 id="subtitulo">About MDHL</h2>
+      <img
+        id="logo"
+        src="./assets/img/LogoMightyducks-01.png"
+        alt="Logo del equipo"
+      >
     </div>
-    <div class="prueba">
+
+    <div class="container-nav-main">
       <nav class="nav-a">
         <a href="./index.html">Home</a>
         <a href="#">About</a>
@@ -69,7 +67,7 @@
           height="200"
           src="./assets/img/hockey2.jpg"
           alt="Jugadora de Hockey"
-        />
+        >
       </main>
     </div>
   </body>
