--- a/index.html
+++ b/index.html
@@ -1,40 +1,36 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="./assets/img/favicon-migthyDucks.png"
-    />
+      href="./assets/img/favicon-migthyDucks.png">
     <title>Migthy Duck</title>
   </head>
   <body>
     <header>
       <h1>Mighty Ducks Hockey League</h1>
     </header>
-    <div class="container">
-      <div>
-        <h2 id="subtitulo">Upcoming Events</h2>
-      </div>
-      <div>
-        <img
-          id="logo"
-          src="./assets/img/LogoMightyducks-01.png"
-          alt="Logo del equipo"
-        />
-      </div>
+
+    <div class="container-text-logo">
+      <h2 id="subtitulo">Upcoming Events</h2>
+      <img
+        id="logo"
+        src="./assets/img/LogoMightyducks-01.png"
+        alt="Logo del equipo"
+      >
     </div>
-    <div class="prueba">
+
+    <div class="container-nav-main">
       <nav>
         <a href="#">Home</a>
         <a href="./about.html">About</a>
         <a href="./contact.html">Contact</a>
       </nav>
-
       <main>
         <article class="container-events">
           <h3>August 4</h3>
@@ -44,15 +40,13 @@
           <h3>August 16</h3>
           <p class="p-events">Season Kick-off: Meet the Teams</p>
         </article>
-
         <article class="container-events">
           <h3>September 1</h3>
           <p class="p-events">
             First Game of the Season (Check Game Schedule for details)
           </p>
         </article>
-
-        <img src="./assets/img/hockey1.jpg" alt="Jugadora de Hockey" />
+        <img src="./assets/img/hockey1.jpg" alt="Jugadora de Hockey">
       </main>
     </div>
   </body>
