--- a/contact.html
+++ b/contact.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <link
       rel="shortcut icon"
       type="image/x-icon"
       href="./assets/img/favicon-migthyDucks.png"
-    >
+    />
     <title>Migthy Duck</title>
   </head>
   <body>
@@ -22,7 +22,7 @@
         id="logo"
         src="./assets/img/LogoMightyducks-01.png"
         alt="Logo del equipo"
-      >
+      />
     </div>
 
     <div class="container-nav-main">
@@ -42,7 +42,7 @@
             We reply to your email as soon as we can
           </p>
         </article>
-        <img src="./assets/img/hockey3.jpg" alt="Dos jugadores de hockey">
+        <img src="./assets/img/hockey3.jpg" alt="Dos jugadores de hockey" />
       </main>
     </div>
   </body>
