--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <link
       rel="shortcut icon"
       type="image/x-icon"
-      href="./assets/img/favicon-migthyDucks.png">
+      href="./assets/img/favicon-migthyDucks.png"
+    />
     <title>Migthy Duck</title>
   </head>
+
   <body>
     <header>
       <h1>Mighty Ducks Hockey League</h1>
@@ -22,13 +24,15 @@
         id="logo"
         src="./assets/img/LogoMightyducks-01.png"
         alt="Logo del equipo"
-      >
+      />
     </div>
 
     <div class="container-nav-main">
       <nav>
         <a href="#">Home</a>
         <a href="./about.html">About</a>
+        <a href="./contact.html">Contact</a>
+        <a href="./rules.html">Rules & Policies</a>
         <a href="./contact.html">Contact</a>
       </nav>
       <main>
@@ -46,7 +50,7 @@
             First Game of the Season (Check Game Schedule for details)
           </p>
         </article>
-        <img src="./assets/img/hockey1.jpg" alt="Jugadora de Hockey">
+        <img src="./assets/img/hockey1.jpg" alt="Jugadora de Hockey" />
       </main>
     </div>
   </body>
