Agregue algunos cambios a los archivos y cree la pagina rules

--- a/contact.html
+++ b/contact.html
@@ -30,6 +30,8 @@
         <a href="./index.html">Home</a>
         <a href="./about.html">About</a>
         <a href="#">Contact</a>
+        <a href="./rules.html">Rules & Policies</a>
+        <a href="./rules.html">Rules & Policies</a>
       </nav>
       <main>
         <article class="container-contact">
