--- a/about.html
+++ b/about.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css">
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="./assets/css/style.css" />
     <link
       rel="shortcut icon"
       type="image/x-icon"
       href="./assets/img/favicon-migthyDucks.png"
-    >
+    />
     <title>Migthy Duck</title>
   </head>
   <body>
@@ -23,7 +23,7 @@
         id="logo"
         src="./assets/img/LogoMightyducks-01.png"
         alt="Logo del equipo"
-      >
+      />
     </div>
 
     <div class="container-nav-main">
@@ -31,6 +31,8 @@
         <a href="./index.html">Home</a>
         <a href="#">About</a>
         <a href="./contact.html">Contact</a>
+        <a href="./rules.html">Rules & Policies</a>
+        <a href="./rules.html">Rules & Policies</a>
       </nav>
 
       <main>
@@ -67,7 +69,7 @@
           height="200"
           src="./assets/img/hockey2.jpg"
           alt="Jugadora de Hockey"
-        >
+        />
       </main>
     </div>
   </body>
