--- a/game_info.html
+++ b/game_info.html
@@ -5,11 +5,108 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css" />
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon-migthyDucks.png" />
     <title>Document</title>
 </head>
 
 <body>
+    <header>
+        <h1>Mighty Ducks Hockey League</h1>
+    </header>
 
+    <div class="container-text-logo">
+        <h2 id="subtitulo">Upcoming Events</h2>
+        <img id="logo" src="./assets/img/LogoMightyducks-01.png" alt="Logo del equipo" />
+    </div>
+
+    <div class="container-nav-main" id="gamesBackground">
+        <nav>
+            <a href="./index.html">Home</a>
+            <a href="./about.html">About</a>
+            <a href="./contact.html">Contact</a>
+            <a href="./rules.html">Rules & Policies</a>
+            <a href="#">Game Information</a>
+        </nav>
+        <main>
+            <section class="section-tables">
+                <h3 id="table-title">Fall Schedule</h3>
+                <div class="container-table">
+                    <table>
+                        <caption>* All games take place on Saturday.</caption>
+                        <thead>
+                            <tr>
+                                <th>SEPTEMBER</th>
+                                <th>Teams</th>
+                                <th>Location</th>
+                                <th>Times</th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            <tr>
+                                <td rowspan="2">9/01</td>
+                                <td>U1 and U4</td>
+                                <td>AJ Katzenmaier</td>
+                                <td>9:30 a.m</td>
+                            </tr>
+                            <tr>
+                                <td>U3 and U2</td>
+                                <td>Greenbay</td>
+                                <td>1:00 p.m</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">9/08</td>
+                                <td>U5 and U6</td>
+                                <td>Howard A Yeager</td>
+                                <td>9:30 a.m</td>
+                            </tr>
+                            <tr>
+                                <td>U6 and U1</td>
+                                <td>Marjorie P Hart</td>
+                                <td>1:00 p.m</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">9/15</td>
+                                <td>U2 and U4</td>
+                                <td>North</td>
+                                <td>9:30 a.m</td>
+                            </tr>
+                            <tr>
+                                <td>U3 and U5</td>
+                                <td>AJ Katzenmaier</td>
+                                <td>1:00 p.m</td>
+                            </tr>
+                            <tr>
+                                <td rowspan="2">9/22</td>
+                                <td>U1 and U3</td>
+                                <td>South</td>
+                                <td>9:30 a.m</td>
+                            </tr>
+                            <tr>
+                                <td>U2 and U6</td>
+                                <td>Howard A Yeager</td>
+                                <td>1:00 p.m</td>
+                            </tr>
+                            <tr>
+                                <td>9/29</td>
+                                <td>U4 and U5</td>
+                                <td>Greenbay</td>
+                                <td>9:30 a.m</td>
+                            </tr>
+                        </tbody>
+                    </table>
+                </div>
+                <div class="container-additional">
+                    <p><b>Facility Type:</b> Outdoor</p>
+                    <p><b>Additional information:</b> If deemed necessary by MDHL games may be shortened or cancelled
+                        due to extreme weather conditions</p>
+                    <p><b>Please direct all questions to:</b> Michael Randall, League Coordinator</p>
+                    <p><b>Phone:</b>(630) 690-8132</p>
+                    <p><b>Email:</b>michael.randall@chihockey.org</p>
+                </div>
+            </section>
+        </main>
+    </div>
 </body>
 
 </html>
