--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <a href="./about.html">About</a>
       <a href="./contact.html">Contact</a>
       <a href="./rules.html">Rules & Policies</a>
-      <a href="./contact.html">Contact</a>
+      <a href="./game_info.html">Game Information</a>
     </nav>
     <main>
       <article class="container-events">
