tablas y listas terminadas

--- a/game_info.html
+++ b/game_info.html
@@ -14,12 +14,10 @@
     <header>
         <h1>Mighty Ducks Hockey League</h1>
     </header>
-
     <div class="container-text-logo">
-        <h2 id="subtitulo">Upcoming Events</h2>
+        <h2 id="subtitulo">Game Information</h2>
         <img id="logo" src="./assets/img/LogoMightyducks-01.png" alt="Logo del equipo" />
     </div>
-
     <div class="container-nav-main" id="gamesBackground">
         <nav>
             <a href="./index.html">Home</a>
@@ -101,8 +99,9 @@
                     <p><b>Additional information:</b> If deemed necessary by MDHL games may be shortened or cancelled
                         due to extreme weather conditions</p>
                     <p><b>Please direct all questions to:</b> Michael Randall, League Coordinator</p>
-                    <p><b>Phone:</b>(630) 690-8132</p>
-                    <p><b>Email:</b>michael.randall@chihockey.org</p>
+                    <p><b>Phone:</b><a href="tel:(630) 690-8132">(630) 690-8132</a></p>
+                    <p><b>Email:</b><a href="mailto:michael.randall@chihockey.org">michael.randall@chihockey.org</a>
+                    </p>
                 </div>
             </section>
         </main>
