--- a/contact.html
+++ b/contact.html
@@ -25,7 +25,7 @@
       <a href="./about.html">About</a>
       <a href="#">Contact</a>
       <a href="./rules.html">Rules & Policies</a>
-      <a href="./rules.html">Rules & Policies</a>
+      <a href="./game_info.html">Game Information</a>
     </nav>
     <main>
       <article class="container-contact">
