--- a/rules.html
+++ b/rules.html
@@ -13,20 +13,18 @@
 <body>
     <header>
         <h1>Mighty Ducks Hockey League</h1>
+        <div class="container-text-logo">
+            <h2 id="subtitulo">Rules & Policies</h2>
+            <img id="logo" src="./assets/img/LogoMightyducks-01.png" alt="Logo del equipo" />
+        </div>
     </header>
-
-    <div class="container-text-logo">
-        <h2 id="subtitulo">Upcoming Events</h2>
-        <img id="logo" src="./assets/img/LogoMightyducks-01.png" alt="Logo del equipo" />
-    </div>
-
-    <div class="container-nav-main" id="rulesBackground">
+    <div class="container-nav-main">
         <nav>
             <a href="./index.html">Home</a>
             <a href="./about.html">About</a>
             <a href="./contact.html">Contact</a>
             <a href="#">Rules & Policies</a>
-            <a href="./contact.html">Contact</a>
+            <a href="./game_info.html">Game Information</a>
         </nav>
         <main>
             <section class="section-rules">
@@ -43,7 +41,7 @@
                             background, expertise, accomplishments or standing.
                         </dd>
                     </dl>
-                    <h4>IHF FIELD REGULATIONS</h4>
+                    <h4 id="subRules">IHF FIELD REGULATIONS</h4>
                     <ol>
                         <li>DIMENSIONS.IHF Law 1 provides for flexible external field dimensions within
                             a given maximum and minimum width and length. These dimensions should be
@@ -57,12 +55,15 @@
                             from leagues, districts or associations that are unable to provide an acceptable
                             field may be required to play all their games away.</li>
                         <li>FIELDS USED BY YOUNG AGE GROUPS
-                            a. U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields
-                            for older age groups should be progressively larger.
-                            b. U-8 plays on a field 40-50 yards in length and 20-30 yards width.
-                            c. U-10 play on a field 70-80 yards in length and 40-50 yards in width.
-                            d. In addition, fields used by young age groups may have their internal
-                            dimensions and size of goal similarly modified.</li>
+                            <ol type="a">
+                                <li>U-6 play on a field approximately 20 X 40 yards with no penalty areas. Fields
+                                    for older age groups should be progressively larger.</li>
+                                <li>U-8 plays on a field 40-50 yards in length and 20-30 yards width.</li>
+                                <li>U-10 play on a field 70-80 yards in length and 40-50 yards in width.</li>
+                                <li> In addition, fields used by young age groups may have their internal dimensions and
+                                    size of goal similarly modified.</li>
+                            </ol>
+                        </li>
                     </ol>
                     <dl>
                         <dt>ALL-PLAY</dt>
