Elimine algunas cosas innecesarias al final de las etiquetas

--- a/game_info.html
+++ b/game_info.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon-migthyDucks.png" />
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon-migthyDucks.png">
     <title>Document</title>
 </head>
 
@@ -16,7 +16,7 @@
     </header>
     <div class="container-text-logo">
         <h2 id="subtitulo">Game Information</h2>
-        <img id="logo" src="./assets/img/LogoMightyducks-01.png" alt="Logo del equipo" />
+        <img id="logo" src="./assets/img/LogoMightyducks-01.png" alt="Logo del equipo">
     </div>
     <div class="container-nav-main" id="gamesBackground">
         <nav>
@@ -99,7 +99,7 @@
                     <p><b>Additional information:</b> If deemed necessary by MDHL games may be shortened or cancelled
                         due to extreme weather conditions</p>
                     <p><b>Please direct all questions to:</b> Michael Randall, League Coordinator</p>
-                    <p><b>Phone:</b><a href="tel:(630) 690-8132">(630) 690-8132</a></p>
+                    <p><b>Phone:</b><a href="tel:(630)690-8132">(630) 690-8132</a></p>
                     <p><b>Email:</b><a href="mailto:michael.randall@chihockey.org">michael.randall@chihockey.org</a>
                     </p>
                 </div>
