--- a/rules.html
+++ b/rules.html
@@ -2,11 +2,11 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="./assets/css/style.css" />
-    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon-migthyDucks.png" />
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./assets/css/style.css">
+    <link rel="shortcut icon" type="image/x-icon" href="./assets/img/favicon-migthyDucks.png">
     <title>Mighty Ducks Hockey League</title>
 </head>
 
@@ -15,7 +15,7 @@
         <h1>Mighty Ducks Hockey League</h1>
         <div class="container-text-logo">
             <h2 id="subtitulo">Rules & Policies</h2>
-            <img id="logo" src="./assets/img/LogoMightyducks-01.png" alt="Logo del equipo" />
+            <img id="logo" src="./assets/img/LogoMightyducks-01.png" alt="Logo del equipo">
         </div>
     </header>
     <div class="container-nav-main">
