--- a/game_info.html
+++ b/game_info.html
@@ -28,7 +28,7 @@
         </nav>
         <main>
             <section class="section-tables">
-                <h3 id="table-title">Fall Schedule</h3>
+                <h3 id="tableTitle">Fall Schedule</h3>
                 <div class="container-table">
                     <table>
                         <caption>* All games take place on Saturday.</caption>
