Corregi navbar y main y aplique algunas propiedades

--- a/registration.html
+++ b/registration.html
@@ -25,9 +25,10 @@
         <nav class="nav-c">
             <a href="./index.html">Home</a>
             <a href="./about.html">About</a>
-            <a href="#">Contact</a>
+            <a href="./contact.html">Contact</a>
             <a href="./rules.html">Rules & Policies</a>
             <a href="./game_info.html">Game Information</a>
+            <a href="#">Registration </a>
         </nav>
         <main>
             <section id="formRegistration">
